@@ -25,6 +25,7 @@
 {core/editor-groups.cfg}
 {core/editor2-brushes.cfg}
 {core/editor2-hotkeys.cfg}
+{core/editor2-tods.cfg}
 {core/editor2-tool-hints.cfg}
 #endif
 #endif
