@@ -1,0 +1,8 @@
+#textdomain wesnoth-editor
+
+[editor_times]
+	{DAWN}
+	{MORNING}
+	{DUSK}
+	{FIRST_WATCH}
+[/editor_times]
