@@ -3,8 +3,13 @@ changes may be omitted). For a complete list of changes, see the main
 changelog: http://svn.gna.org/viewcvs/*checkout*/wesnoth/trunk/changelog
 
 Version 1.5.4+svn:
+  * Editor2
+    * Allow changing the display time of day from a preset list or to custom
+	  values via sliders, available in the new editor settings dialog.
+
   * Language and translations
     * updated translations: Finnish, Slovak.
+
   * Unit changes and balancing
     * Made units with the healthy trait take a quarter less damage from poison.
 
